--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.8'
 
 services:
   controller:
+    container_name: controller
+    restart: always
     image: wingst-automation
     build:
       context: .
